--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -8,11 +8,12 @@
         <div class="w-full lg:w-2/3 mx-auto flex flex-col mt-12 relative">
             <span class="absolute inset-y-0 left-2/5 ml-10 w-0.5 bg-grey-40 hidden md:block"></span>
 
+            <% # cruise %>
             <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_pack_tag "home/logo-cruise.svg", class: "w-48 h-16 relative -top-5", alt: "company logo" %>
+                            <%= image_pack_tag "home/logo-cruise.svg", class: "w-48 h-16 relative -top-6", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
@@ -42,8 +43,8 @@
                 </div>
             </div>
 
-
-            <div class="flex flex-col md:flex-row text-center md:text-left mt-8">
+            <% # lyft %>
+            <div class="flex flex-col md:flex-row text-center md:text-left mt-24 md:mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
@@ -77,6 +78,8 @@
                     </div>
                 </div>
             </div>
+
+            <% # teespring %>
             <div class="flex flex-col md:flex-row text-center md:text-left mt-24 md:mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
@@ -114,6 +117,8 @@
                     </div>
                 </div>
             </div>
+
+            <% # onelogin %>
             <div class="flex flex-col md:flex-row text-center md:text-left mt-24 md:mt-8">
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
