--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -11,26 +11,26 @@
         <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
             <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-70">
                 <div class="relative pb-[56%] h-0 overflow-hidden">
-                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/RrobeFGEX3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
-                        BMW Advertisement</h3>
+                        Long Beach Grand Prix</h3>
                     <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 px-4">
-                        A mock advertisement for <span class="font-black">The Ultimate Driving Machine</span>
+                        Race cars in the streets of LA! <span class="font-black">Long Beach Grand Prix</span>
                     </p>
                 </div>
             </div>
 
             <div class="shadow pt-2 pr-2 pl-2 pb-6 group rounded bg-white dark:bg-primary-70">
                 <div class="relative pb-[56%] h-0 overflow-hidden">
-                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="absolute top-0 left-0 w-full h-full" src="https://www.youtube.com/embed/C4bfPkHKULs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="text-center">
                     <h3
                         class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
-                        The Storm</h3>
+                        Winter Vibes</h3>
                     <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 px-4">
                         A short, <span class="font-black">super-slow-motion</span> cinematic film about snow
                     </p>
