--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -59,7 +59,7 @@
         Location</p>
     </div>
     <p class="font-body font-bold text-primary dark:text-primary-500 lg:text-lg pt-2 text-left">
-      Remote From Sunny Oceanside, California
+      Remote in beautiful Oceanside, California
     </p>
   </div>
 </div>
