--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -8,7 +8,7 @@
 
             <div class="w-full md:w-4/5 lg:w-3/5 shadow dark:shadow-primary-40 dark:bg-primary p-2 my-6 group rounded">
                 <video autoplay loop muted playsinline>
-                    <source src="<%= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
+                    <source src="<%#= asset_pack_path("media/images/home/squarecrusher-hq.mp4") %>" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
                 </video>
             </div>
