--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -13,4 +13,4 @@
     </div>
 </div>
 <div class="bg-center bg-cover bg-no-repeat h-72 sm:h-64 md:h-72 lg:h-96"
-        style="background-image: url(<%= asset_pack_path("media/images/home/map.jpg") %>);"></div>
+        style="background-image: url(<%= image_pack_path("static/app/javascript/images/home/map.jpg") %>);"></div>
