--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -13,7 +13,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_tag "static/app/javascript/images/home/logo-cruise.svg", class: "w-48 h-16 relative -top-6", alt: "company logo" %>
+                            <%= image_tag "logo-cruise.svg", class: "w-48 h-16 relative -top-6", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
@@ -48,7 +48,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_tag "static/app/javascript/images/home/logo-lyft.svg", class: "w-48 h-16 relative -top-5", alt: "company logo" %>
+                            <%= image_tag "logo-lyft.svg", class: "w-48 h-16 relative -top-5", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
@@ -84,7 +84,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_tag "static/app/javascript/images/home/logo-teespring.svg", class: "w-48 h-auto dark:brightness-200", alt: "company logo" %>
+                            <%= image_tag "logo-teespring.svg", class: "w-48 h-auto dark:brightness-200", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
@@ -123,7 +123,7 @@
                 <div class="md:w-2/5">
                     <div class="flex justify-center md:justify-start">
                         <span class="flex-shrink-0">
-                            <%= image_tag "static/app/javascript/images/home/logo-onelogin.svg", class: "w-48 h-auto relative -top-2 dark:invert", alt: "company logo" %>
+                            <%= image_tag "logo-onelogin.svg", class: "w-48 h-auto relative -top-2 dark:invert", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
                             <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
