webpack working but no asset pipeline sprockets-rails

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -44,7 +44,7 @@
 
             <% # close mobile nav %>
             <button class="absolute top-0 right-0 mt-4 mr-4" @click="$parent.mobileMenu = false">
-                <%= image_pack_tag "images/icon-close.svg", class: "h-10 w-auto", alt: "close" %>
+                <%= image_tag "images/icon-close.svg", class: "h-10 w-auto", alt: "close" %>
             </button>
 
             <ul class="flex flex-col mt-8">
