--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -10,10 +10,10 @@
             <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-70 dark:hover:bg-primary-90 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_tag "images/home/icon-software-development.svg", alt: "development icon", class: "invert dark:opacity-70" %>
+                        <%= image_tag asset_path("packs/images/home/icon-software-development.svg"), alt: "development icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
-                        <%= image_tag "images/home/icon-software-development.svg", alt: "development icon", class: "invert-0 dark:invert" %>
+                        <%= image_tag asset_path("packs/images/home/icon-software-development.svg"), alt: "development icon", class: "invert-0 dark:invert" %>
                     </div>
                 </div>
                 <div class="text-center">
@@ -29,10 +29,10 @@
             <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-70 dark:hover:bg-primary-90 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_tag "images/home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert dark:opacity-70" %>
+                        <%= image_tag asset_path("packs/images/home/icon-app-development.svg"), alt: "Mobile Application icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
-                        <%= image_tag "images/home/icon-app-development.svg", alt: "Mobile Application icon", class: "invert-0 dark:invert" %>
+                        <%= image_tag asset_path("packs/images/home/icon-app-development.svg"), alt: "Mobile Application icon", class: "invert-0 dark:invert" %>
                     </div>
                 </div>
                 <div class="text-center">
@@ -48,10 +48,10 @@
             <div class="shadow px-8 py-12 hover:bg-primary dark:bg-primary-70 dark:hover:bg-primary-90 group rounded">
                 <div class="text-center w-24 xl:w-28 h-24 xl:h-28 mx-auto">
                     <div class="hidden group-hover:block">
-                        <%= image_tag "images/home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert dark:opacity-70" %>
+                        <%= image_tag asset_path("packs/images/home/icon-filmmaking.svg"), alt: "film and photography icon", class: "invert dark:opacity-70" %>
                     </div>
                     <div class="block group-hover:hidden">
-                        <%= image_tag "images/home/icon-filmmaking.svg", alt: "film and photography icon", class: "invert-0 dark:invert" %>
+                        <%= image_tag asset_path("packs/images/home/icon-filmmaking.svg"), alt: "film and photography icon", class: "invert-0 dark:invert" %>
                     </div>
                 </div>
                 <div class="text-center">
