--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -34,7 +34,7 @@
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black dark:text-primary-1000 block">
-                                        Software Engineer on the Dispatch team. Responsible for matching rides and deliveries with autonomous vehicles.
+                                        Software Engineer on the Test Platform team. Helped build "virtual autonomous vehicles" for use in end-to-end and load testing.
                                     </span>
                                 </div>
                             </div>
