--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -2,7 +2,7 @@
     <div class="container py-16 md:py-20">
         <div class="w-full text-center lg:text-left">
             <h2 class="font-header font-semibold text-primary dark:text-primary-1000 text-4xl sm:text-5xl lg:text-6xl uppercase">
-                Game Design</h2>
+                Mobile Games</h2>
         </div>
         <div class="flex flex-col lg:flex-row items-center">
 
@@ -37,9 +37,9 @@
                     <div class="flex items-center justify-center lg:justify-start">
                         <i class="bx bx-game text-5xl text-primary dark:text-primary-500 mr-5 p0"></i>
                         <h4 class="font-header font-normal text-black dark:text-primary-1000 uppercase">
-                            <%= "Fast Paced " %>
+                            <%= "8-Bit Style " %>
                             <span class="text-primary dark:text-primary-500 font-black">
-                                Action Game
+                                Arcade Game
                             </span>
                         </h4>
                     </div>
