--- a/app/assets/stylesheets/photography.sass
+++ b/app/assets/stylesheets/photography.sass
@@ -1,3 +1,6 @@
+@import "photoswipe/dist/photoswipe"
+@import "photoswipe/dist/default-skin/default-skin"
+
 // ------
 // layout
 // ------
@@ -94,4 +97,3 @@
       transform: rotate(0deg)
     to
       transform: rotate(360deg)
-
