--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,11 +16,11 @@ html[lang="en"]
     meta[itemprop="name" content="Radler Designs - benradler.com"]
     meta[itemprop="url" content="#{root_url}"]
     meta[itemprop="description" content="Radler Designs - Ben has ten years of professional experience as a Software Engineer at industry-leading companies in the San Francisco Bay Area."]
-    meta[itemprop="thumbnailUrl" content="#{image_pack_url("images/layout/social.jpg")}"]
-    meta[itemprop="image" content="#{image_pack_url("images/layout/social.jpg")}"]
-    link[rel="image_src" href="#{image_pack_url("images/layout/social.jpg")}"]
+    meta[itemprop="thumbnailUrl" content="#{image_url("layout/social.jpg")}"]
+    meta[itemprop="image" content="#{image_url("layout/social.jpg")}"]
+    link[rel="image_src" href="#{image_url("layout/social.jpg")}"]
     link[rel="canonical" href="#{root_url}"]
-    link[rel="icon" type="image/png" href="#{image_pack_url("images/layout/favicon.png")}"]
+    link[rel="icon" type="image/png" href="#{image_url("layout/favicon.png")}"]
 
     - # for browsers/devices which customize UI based on theme
     meta[name="theme-color" content="#5540af" media="(prefers-color-scheme: light)"]
@@ -39,7 +39,7 @@ html[lang="en"]
     meta[property="og:url" content="#{root_url}"]
     meta[property="og:type" content="website"]
     meta[property="og:description" content="Radler Designs - Ben has ten years of professional experience as a Software Engineer at industry-leading companies in the San Francisco Bay Area."]
-    meta[property="og:image" content="#{image_pack_url("images/layout/social.jpg")}"]
+    meta[property="og:image" content="#{image_url("layout/social.jpg")}"]
     meta[property="og:image:type" content="image/jpeg"]
     meta[property="og:image:width" content="1200"]
     meta[property="og:image:height" content="627"]
@@ -47,16 +47,16 @@ html[lang="en"]
     - # twitter
     meta[name="twitter:site" content="@benradler"]
     meta[name="twitter:title" content="Ben Radler"]
-    meta[name="twitter:image" content="#{image_pack_url("images/layout/social.jpg")}"]
+    meta[name="twitter:image" content="#{image_url("layout/social.jpg")}"]
     meta[name="twitter:url" content="#{root_url}"]
     meta[name="twitter:description" content="qwerty"]
     meta[name="twitter:card" content="summary_large_image"]
 
     - # staging/production require this
-    = stylesheet_pack_tag 'application', 'photography', 'contact-me', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'application', 'photography', 'contact-me', 'pygment', 'data-turbo-track': 'reload'
 
-    - # this is the webpack insertion point, including ALL tailwind CSS imported by application.js...so confusing
-    = javascript_pack_tag 'application', 'photography', 'contact-me', 'blog', 'data-turbo-track': 'reload'
+    - # javascript bundle insertion point
+    = javascript_include_tag 'application', 'photography', 'blog', 'data-turbo-track': 'reload', defer: true
 
     = yield :head
     = csrf_meta_tags
